Added docs for embedded UI components

--- a/examples/admin/src/assets/i18n/en.json
+++ b/examples/admin/src/assets/i18n/en.json
@@ -210,7 +210,7 @@
         "success": "Files uploaded successfully"
       }
     },
-    "dialogue": {
+    "dialog": {
       "title": "Create file",
       "choose.file": "File",
       "public": "Public"
