Refactoring * change names of object components to entities

--- a/examples/admin/src/assets/i18n/en.json
+++ b/examples/admin/src/assets/i18n/en.json
@@ -283,7 +283,7 @@
     }
   },
   "object": {
-    "title": "Объекты",
+    "title": "Entities",
     "search": "Search",
     "details": {
       "target": {
