--- a/examples/admin/src/assets/i18n/ru.json
+++ b/examples/admin/src/assets/i18n/ru.json
@@ -283,7 +283,7 @@
     }
   },
   "object": {
-    "title": "Объекты",
+    "title": "Сущности",
     "search": "Поиск",
     "details": {
       "target": {
