Improvements and refactoring: * Print media-type in media-input component * Fix duplicate object behavior * Fix translations

--- a/examples/admin/src/assets/i18n/en.json
+++ b/examples/admin/src/assets/i18n/en.json
@@ -312,7 +312,7 @@
         "id": "ID",
         "name": "Name",
         "priority": "Priority",
-        "params": "Params",
+        "size": "Size",
         "cancel": "Cancel",
         "ok": "Save",
         "error": "Error saving tab",
