--- a/examples/admin/src/assets/i18n/ru.json
+++ b/examples/admin/src/assets/i18n/ru.json
@@ -312,7 +312,7 @@
         "id": "ID",
         "name": "Наименование",
         "priority": "Приоритет",
-        "params": "Параметры",
+        "size": "Размер",
         "cancel": "Отмена",
         "ok": "Сохранить",
         "error": "Ошибка сохранения вкладки",
