Fix entity detail popup and date section renderer

--- a/examples/admin/src/assets/i18n/en.json
+++ b/examples/admin/src/assets/i18n/en.json
@@ -335,6 +335,7 @@
         "virtual": "Virtual",
         "primary": "Primary",
         "unique": "Unique",
+        "named": "Named",
         "alias": "Alias",
         "multiple": "Array of values",
         "actions": "Actions",
