--- a/examples/admin/src/assets/i18n/ru.json
+++ b/examples/admin/src/assets/i18n/ru.json
@@ -335,6 +335,7 @@
         "virtual": "Виртуальный",
         "primary": "Первичный",
         "unique": "Уникальный",
+        "named": "Именованный",
         "alias": "Псевдоним",
         "multiple": "Массив значений",
         "actions": "Действия",
